Add movie app angular project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <!--character set to tell browser which characters are used -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- sets the width of the page to follow the screen width and set inital zoom level -->
   <title>Portfolio of Alex Offner - Home</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -16,12 +17,15 @@
 <body class="site">
   <header>
     <div class='page-header'>
-      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
+      <a href='index.html' class='page-header__item'><img src="img/logo.svg"
+          alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background"
+          role="link" class='img__shake logo'></a>
       <nav class='navigation-list page-header__item'>
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
             <div class='link__shake'>
-              <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">Home</a>
+              <a href="index.html" role="menuitem"
+                class="navigation-list__item navigation-list__item--active link">Home</a>
             </div>
           </li>
           <li role="presentation">
@@ -47,7 +51,8 @@
     <img src="img/picture-alex-offner.png" class='profile__portrait' alt="picture of Alex Offner">
     <h1>Hi everybody</h1>
     <p>
-      I am Alex Offner. I am currently learning <span>web</span> development on Career Foundry and The Odin Project. I like to tests and create things. 
+      I am Alex Offner. I am currently learning <span>web</span> development on Career Foundry and The Odin Project. I
+      like to tests and create things.
     </p>
     <div class='link__shake'>
       <a href="work.html" target="_blank" class="link__animation">Have a look at the projects I am working on</a>
@@ -56,11 +61,14 @@
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
-      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo"
+          class='img__shake'></a>
       <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
+      <a href="https://twitter.com/AlexanderOffner" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo"
+          class='img__shake'></a>
       <!--placeholder link-->
-      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg"
+          alt="LinkedIn logo" class='img__shake'></a>
       <!--placeholder link-->
     </div>
   </footer>
