--- a/work.html
+++ b/work.html
@@ -137,13 +137,24 @@
         </div>
       </div>
       <div class="grid__item">
-        <h2>Future unnamed project</h2>
+        <h2>Movie App Angular</h2>
+        <img src="img/movie_app_angular.PNG" class="work-pictures" alt="picture of ChatMeUp App">
         <p>
-          For this project I was responisble for the frontend. I also created
-          the HTML and CSS layout
+          I created another client side for my Movie App. To learn more frameworks this time I used Angular for the
+          client side.
+          As in the original version developed with react, users can create an account and login. After that they can
+          access a list of movies and add them to their list of favourites. Users are also able to change their profile
+          information or delete their account.
         </p>
-        <div class="link__shake">
-          <a href="#">Have a look at the project on GitHub</a>
+        <div class="link__shake center">
+          <a href="https://github.com/Alex-Offner/myFlix-Angular-client" target="_blank">Have a look at the project on
+            GitHub</a>
+        </div>
+        <p class="center">or</p>
+        <div class="link__shake center">
+          <a href="https://alex-offner.github.io/myFlix-Angular-client/welcome" target="_blank">Have a look at the live,
+            hosted version
+            on GitHub pages</a>
         </div>
       </div>
     </div>
@@ -154,7 +165,8 @@
       <a href="https://github.com/Alex-Offner/portfolio-website" target="_blank"><img src="img/github-logo.svg"
           alt="Github logo" class="img__shake" /></a>
       <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class="img__shake" /></a>
+      <a href="https://twitter.com/AlexanderOffner" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo"
+          class="img__shake" /></a>
       <!--placeholder link-->
       <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg"
           alt="LinkedIn logo" class="img__shake" /></a>
