--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <!--character set to tell browser which characters are used -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- sets the width of the page to follow the screen width and set inital zoom level -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- sets the width of the page to follow the screen width and set inital zoom level -->
   <title>Portfolio of Alex Offner - About</title>
   <link rel="shortcut icon" href="./img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -16,7 +17,9 @@
 <body>
   <header>
     <div class='page-header'>
-      <a href='index.html' class='page-header__item'><img src="img/logo.svg" alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background" role="link" class='img__shake logo'></a>
+      <a href='index.html' class='page-header__item'><img src="img/logo.svg"
+          alt="Personal logo of Alex Offner, a text logo consisting of the name with a blue coloured background"
+          role="link" class='img__shake logo'></a>
       <nav class='navigation-list page-header__item'>
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -26,7 +29,8 @@
           </li>
           <li role="presentation">
             <div class='link__shake'>
-              <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">This is me</a>
+              <a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active link">This
+                is me</a>
             </div>
           </li>
           <li role="presentation">
@@ -46,8 +50,12 @@
   <div>
     <main class="main__layout">
       <h1>About myself:</h1>
-      <p>My name is Alexander Offner and I recently started studying Web Development with Career Foundry. I have a bachelor's degree in applied chemistry with a main focus on biochemistry. I am also a co-founder of the charity Salvate Canes e.V., an
-        animal welfare organisation based in Germany. Coding, running and travelling are my passions and I also love playing tabletop role-playing games. Currently I am based in Vancouver, Canada but originally I am from Nuremberg, Germany. I am
+      <p>My name is Alexander Offner and I recently started studying Web Development with Career Foundry. I have a
+        bachelor's degree in applied chemistry with a main focus on biochemistry. I am also a co-founder of the charity
+        Salvate Canes e.V., an
+        animal welfare organisation based in Germany. Coding, running and travelling are my passions and I also love
+        playing tabletop role-playing games. Currently I am based in Vancouver, Canada but originally I am from
+        Nuremberg, Germany. I am
         fluent
         in German and English and I can understand some very basic Spanish.</p>
       <table>
@@ -92,10 +100,14 @@
         </tbody>
       </table>
       <br>
-      <a href="files/CV.pdf" target="_blank" class="button button__link" id="button__link__color">Have a look at my CV</a>
+      <a href="files/CV.pdf" target="_blank" class="button button__link" id="button__link__color">Have a look at my
+        CV</a>
       <br>
-      <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" width="680" height="340"
+      <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" width="680" height="340"
         viewBox="0 0 680 340" sodipodi:docname="new logo svg.svg" inkscape:version="1.0.2-2 (e86c870879, 2021-01-15)">
         <metadata id="metadata16">
           <rdf:RDF>
@@ -107,11 +119,14 @@
           </rdf:RDF>
         </metadata>
         <defs id="defs14" />
-        <sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10" gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2" inkscape:window-width="1920"
-          inkscape:window-height="1001" id="namedview12" showgrid="false" inkscape:zoom="1.6658604" inkscape:cx="286.42728" inkscape:cy="145.76768" inkscape:window-x="-9" inkscape:window-y="-9" inkscape:window-maximized="1"
-          inkscape:current-layer="layer4" />
+        <sodipodi:namedview pagecolor="#ffffff" bordercolor="#666666" borderopacity="1" objecttolerance="10"
+          gridtolerance="10" guidetolerance="10" inkscape:pageopacity="0" inkscape:pageshadow="2"
+          inkscape:window-width="1920" inkscape:window-height="1001" id="namedview12" showgrid="false"
+          inkscape:zoom="1.6658604" inkscape:cx="286.42728" inkscape:cy="145.76768" inkscape:window-x="-9"
+          inkscape:window-y="-9" inkscape:window-maximized="1" inkscape:current-layer="layer4" />
         <g inkscape:groupmode="layer" id="layer4" inkscape:label="Layer 3 Sun">
-          <ellipse style="fill: #f00; fill-rule: evenodd;" id="path82" cx="91.844429" cy="52.825558" rx="34.216553" ry="34.816845" class="sun" />
+          <ellipse style="fill: #f00; fill-rule: evenodd;" id="path82" cx="91.844429" cy="52.825558" rx="34.216553"
+            ry="34.816845" class="sun" />
         </g>
         <g inkscape:groupmode="layer" id="layer7" inkscape:label="Layer 2 Cloud 1">
           <image width="41.708149" height="26.648411" preserveAspectRatio="none" class="cloud-front" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoUAAAFUCAYAAABSo0bDAAFm9UlEQVR42uy9ebxkZ1Xv/Vvr2VMN
@@ -1940,11 +1955,14 @@
   <footer class='page-footer'>
     <p>Find me on</p>
     <div class='social-media'>
-      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo" class='img__shake'></a>
+      <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo"
+          class='img__shake'></a>
       <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
+      <a href="https://twitter.com/AlexanderOffner" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo"
+          class='img__shake'></a>
       <!--placeholder link-->
-      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg" alt="LinkedIn logo" class='img__shake'></a>
+      <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg"
+          alt="LinkedIn logo" class='img__shake'></a>
       <!--placeholder link-->
     </div>
   </footer>
