--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,8 @@
       <a href="https://github.com/Alex-Offner" target="_blank"><img src="img/github-logo.svg" alt="Github logo"
           class='img__shake'></a>
       <!--placeholder link-->
-      <a href="#" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo" class='img__shake'></a>
+      <a href="https://twitter.com/AlexanderOffner" target="_blank"><img src="img/twitter-logo.svg" alt="twitter logo"
+          class='img__shake'></a>
       <!--placeholder link-->
       <a href="https://www.linkedin.com/in/alexander-offner-953204208/" target="_blank"><img src="img/linkedin-logo.svg"
           alt="LinkedIn logo" class='img__shake'></a>
