Update work links

--- a/work.html
+++ b/work.html
@@ -147,12 +147,14 @@
           information or delete their account.
         </p>
         <div class="link__shake center">
-          <a href="https://github.com/Alex-Offner/myFlix-Angular-client" target="_blank">Have a look at the project on
+          <a href="https://github.com/Alex-Offner/myFlix-Angular-client-new" target="_blank">Have a look at the project
+            on
             GitHub</a>
         </div>
         <p class="center">or</p>
         <div class="link__shake center">
-          <a href="https://alex-offner.github.io/myFlix-Angular-client/welcome" target="_blank">Have a look at the live,
+          <a href="https://alex-offner.github.io/myFlix-Angular-client-new/welcome" target="_blank">Have a look at the
+            live,
             hosted version
             on GitHub pages</a>
         </div>
